# ilbm2raw

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac
imgout/: e.mask  flowers320x256x8.plt  flowers320x256x8.raw  rectintro.bm  rectintro.plt  simpleinterleaved.raw  stripes.raw
imgtest/: flowers320x256x8.iff  prost.iff  rectintro.iff  simpleinterleaved.iff  stripes.iff
src/: Makefile  Makefile.am  Makefile.in  acenoninterleavedtest.sh  bpltest.sh  greptest.sh  ilbm2raw  ilbm2raw.c  rawinterleavedonelineswaptest.sh  rawnoninterleavedtest1.sh  rawnoninterleavedtest2.sh  spacestest.sh  stripestest.sh
src/rawinterleavedonelineswaptest/: simpleinterleaved.raw
